Fixing weird project-card heights on tablet

--- a/css/styles.css
+++ b/css/styles.css
@@ -280,6 +280,18 @@ nav .container-fluid {
     background-color: var(--peachy);
 }
 
+@media (max-width: 568px) {
+    .project {
+        padding: 0;
+    }
+}
+
+@media (max-width: 992px) {
+    .project {
+        padding: 30px;
+    }
+}
+
 @media (min-width: 768px) {
     .jumbotron h1 {
         font-size: 6em;
@@ -722,11 +734,6 @@ hr.caption-rule {
     .finishline-img {
         margin-top: 0;
     }
-    
-    .case-end .more-cases .project-card {
-        margin-bottom: 30px;
-        margin-top: 30px;
-    }
 }
 
 @media (max-width: 992px) {
@@ -763,6 +770,12 @@ hr.caption-rule {
         float: right;
         margin-right: -20px;
         margin-bottom: 40px;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1200px) {
+    .case-end .projects .project-card {
+        min-height: 560px;
     }
 }
 
